# druid

./: Cargo.toml
druid/: Cargo.toml
druid-shell/: Cargo.toml
druid-shell/src/: application.rs  clipboard.rs  error.rs  keyboard.rs  lib.rs  menu.rs  mouse.rs  screen.rs  window.rs
druid-shell/src/backend/mac/: window.rs
druid-shell/src/platform/mac/: window.rs
druid/examples/: anim.rs  async_event.rs  blocking_function.rs  calc.rs  cursor.rs  custom_widget.rs  disabled.rs  either.rs  event_viewer.rs  flex.rs  game_of_life.rs  hello.rs  identity.rs  image.rs  layout.rs  lens.rs  markdown_preview.rs  multiwin.rs  open_save.rs  panels.rs  scroll.rs  scroll_colors.rs  split_demo.rs  styled_text.rs  sub_window.rs  switches.rs  text.rs  textbox.rs  timer.rs  transparency.rs  view_switcher.rs  widget_gallery.rs
druid/examples/web/src/: lib.rs
druid/src/: app.rs  contexts.rs  core.rs  event.rs  ext_event.rs  sub_window.rs  win_handler.rs  window.rs
druid/src/tests/: harness.rs  invalidation_tests.rs  layout_tests.rs  mod.rs
druid/src/widget/: image.rs  lens_wrap.rs  widget.rs
