[package]
name = "druid-shell"
version = "0.7.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Platform abstracting application shell used for druid toolkit."
repository = "https://github.com/linebender/druid"
readme = "README.md"
categories = ["os::macos-apis", "os::windows-apis", "gui"]
edition = "2018"
resolver = "2"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-pc-windows-msvc"

[features]
# Implement HasRawWindowHandle for WindowHandle

# passing on all the image features. AVIF is not supported because it does not
# support decoding, and that's all we use `Image` for.
image_png = ["piet-common/image_png"]
jpeg = ["piet-common/jpeg"]
jpeg_rayon = ["piet-common/jpeg_rayon"]
gif = ["piet-common/gif"]
bmp = ["piet-common/bmp"]
ico = ["piet-common/ico"]
tiff = ["piet-common/tiff"]
webp = ["piet-common/webp"]
pnm = ["piet-common/pnm"]
dds = ["piet-common/dds"]
tga = ["piet-common/tga"]
farbfeld = ["piet-common/farbfeld"]
dxt = ["piet-common/dxt"]
hdr = ["piet-common/hdr"]
serde = ["kurbo/serde"]

[dependencies]
# NOTE: When changing the piet or kurbo versions, ensure that
#       the kurbo version included in piet is compatible with the kurbo version specified here.
copypasta = "0.7.1"
piet-wgpu = { git = "https://github.com/lapce/piet-wgpu" }
winit = "0.25.0"
piet-common = "=0.5.0-pre1"
kurbo = "0.8.1"

tracing = "0.1.22"
lazy_static = "1.4.0"
time = "0.2.16"
cfg-if = "1.0.0"
instant = { version = "0.1.6", features = ["wasm-bindgen"] }
anyhow = "1.0.32"
keyboard-types = { version = "0.5.0", default_features = false }

# Optional dependencies
image = { version = "0.23.12", optional = true, default_features = false }
raw-window-handle = "0.3.3"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.67"
js-sys = "0.3.44"

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3.44"
features = [
        "Window",
        "MouseEvent",
        "CssStyleDeclaration",
        "WheelEvent",
        "KeyEvent",
        "KeyboardEvent",
        "Navigator",
]

[dev-dependencies]
piet-common = { version = "=0.5.0-pre1", features = ["png"] }
static_assertions = "1.1.0"
test-env-log = { version = "0.2.5", features = [
        "trace",
], default-features = false }
tracing-subscriber = "0.2.15"
unicode-segmentation = "1.7.0"

[build-dependencies]
bindgen = { version = "0.58", optional = true }
pkg-config = { version = "0.3", optional = true }
